higher z-index for comments should mean video no longer extends down too far

--- a/demo4/css/style.css
+++ b/demo4/css/style.css
@@ -107,6 +107,7 @@ body {
     padding-top: 10px;
     font-size: 28pt;
     position: relative;
+    z-index: 1000;
 }
 
 .comment-container{
